# stygian

./: .gitattributes  .gitignore  .gitleaks.toml  .markdownlintignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL.md  ORCHESTRATOR.md  PROGRESS-STEALTH-V2.md  PROGRESS.md  README.md  SECURITY.md  deny.toml
crates/mycelium-graph/: Cargo.toml  README.md
crates/mycelium-graph/benches/: pipeline_bench.rs
crates/mycelium-graph/src/: adapters.rs  application.rs  domain.rs  lib.rs  ports.rs
crates/mycelium-graph/src/adapters/: ai.rs  browser.rs  cache.rs  distributed.rs  graphql.rs  http.rs  mock_ai.rs  multimodal.rs  noop.rs  output_format.rs  resilience.rs  storage.rs  wasm_plugin.rs
crates/mycelium-graph/src/application/: api_server.rs  cli.rs  config.rs  executor.rs  extraction.rs  graphql_plugin_registry.rs  health.rs  metrics.rs  pipeline_parser.rs  registry.rs  schema_discovery.rs
crates/mycelium-graph/src/domain/: executor.rs  graph.rs  idempotency.rs  pipeline.rs
crates/mycelium-graph/src/ports/: graphql_plugin.rs  storage.rs  wasm_plugin.rs  work_queue.rs
crates/mycelium-graph/tests/: chaos.rs  integration.rs  jobber_integration.rs  property_tests.proptest-regressions  property_tests.rs
crates/stygian-browser/: Cargo.toml  README.md
crates/stygian-browser/docs/: architecture.md
crates/stygian-browser/examples/: basic_navigation.rs  browser_pool.rs  form_filling.rs  g2_reviews.rs  mcp_server.rs  pixelscan_check.rs  proxy_integration.rs  scraper_cli.rs  screenshot.rs  stealth_benchmark.rs  stealth_bypass.rs  stealth_probe.rs
crates/stygian-browser/src/: acquisition.rs  audio_noise.rs  behavior.rs  behavior_adapter.rs  browser.rs  canvas_noise.rs  cdp_hardening.rs  cdp_protection.rs  config.rs  diagnostic.rs  error.rs  extract.rs  fingerprint.rs  lib.rs  mcp.rs  metrics.rs  navigator_coherence.rs  noise.rs  page.rs  peripheral_stealth.rs  pool.rs  profile.rs  proxy.rs  recorder.rs  rects_noise.rs  session.rs  similarity.rs  stealth.rs  timing_noise.rs  tls.rs  tls_validation.rs  webgl_noise.rs  webrtc.rs
crates/stygian-browser/src/coherence/: mod.rs  probes.rs  report.rs
crates/stygian-browser/src/freshness/: mod.rs
crates/stygian-browser/src/integrity_canary/: mod.rs  probes.rs  report.rs  trend.rs
crates/stygian-browser/src/interstitial_router/: classifier.rs  mod.rs  policy.rs  report.rs  router.rs
crates/stygian-browser/src/replay_defense/: mod.rs
crates/stygian-browser/src/transport_realism/: mod.rs  observations.rs  profile.rs  report.rs  scoring.rs
crates/stygian-browser/src/validation/: benchmark.rs  mod.rs  validators.rs
crates/stygian-browser/tests/: crawllab.rs  detection.rs  integration.rs  mcp_integration.rs  ui.rs
crates/stygian-browser/tests/ui/: extract_enum.rs  extract_enum.stderr  extract_missing_selector.rs  extract_missing_selector.stderr
crates/stygian-charon/: Cargo.toml  README.md
crates/stygian-charon/data/playbooks/: tier1-js.toml  tier1-static.toml  tier2-hostile.toml  unknown.toml
crates/stygian-charon/data/vendor_playbook_rules/: default-manual.toml  tier1-js-cloudflare.toml  tier1-static.toml  tier2-hostile.toml
crates/stygian-charon/data/vendors/: akamai.toml  cloudflare.toml  datadome.toml  perimeter_x.toml
crates/stygian-charon/docs/: backtest-acceptance-thresholds.md  caching-integration-guide.md  change-feed-consumption-guide.md  incident-runbook.md  investigation-bundle.schema.json  issue-closeout-verification.md  metrics-integration-guide.md  normalized-fingerprint-snapshot.schema.json  output-structure.md  p0-p1-e2e-latency.md  p1-backlog.md  playbooks-integration-guide.md  re-promotion-policy.md  release-risk-thresholds.md  signal-coverage-matrix.md  slo-usage-guide.md
crates/stygian-charon/docs/examples/: fingerprint-snapshot-v1-browser.json  fingerprint-snapshot-v1-http.json
crates/stygian-charon/docs/monitoring/: prometheus-scrape-example.yml  slo-dashboard.json
crates/stygian-charon/examples/: cache_benchmark.rs  live_slo_validator.rs  recon.rs
crates/stygian-charon/fuzz/: Cargo.toml
crates/stygian-charon/fuzz/fuzz_targets/: parse_har.rs
crates/stygian-charon/src/: acquisition.rs  adaptive.rs  analyzer.rs  backtest.rs  bundle.rs  cache.rs  classifier.rs  differential.rs  har.rs  investigation.rs  lib.rs  metrics.rs  observatory.rs  policy.rs  probe.rs  release_risk.rs  snapshot.rs  types.rs
crates/stygian-charon/tests/: cache_redis_integration.rs  challenge_feedback_integration.rs  change_feed_integration.rs  cross_crate_integration.rs  live_slo_validator.rs  p0_p1_e2e.rs  playbooks_integration.rs  pow_profile_integration.rs  runbook_diagnostics.rs  slo_integration.rs  snapshot_drift.rs  token_lifecycle_integration.rs  vendor_classifier_integration.rs  vendor_resolver_integration.rs
crates/stygian-extract-derive/: Cargo.toml  README.md
crates/stygian-extract-derive/src/: lib.rs
crates/stygian-graph/: Cargo.toml  README.md
crates/stygian-graph/benches/: pipeline_bench.rs
crates/stygian-graph/src/: adapters.rs  domain.rs  lib.rs  mcp.rs  ports.rs
crates/stygian-graph/src/domain/: graph.rs  (+5 more)
crates/stygian-graph/tests/: chaos.rs  crawllab.rs  integration.rs  jobber_integration.rs  openapi.rs  property_tests.rs
crates/stygian-mcp/: Cargo.toml  README.md
crates/stygian-mcp/src/: aggregator.rs  lib.rs  main.rs
crates/stygian-plugin/: Cargo.toml  README.md
crates/stygian-plugin/examples/: basic_extraction.rs
crates/stygian-plugin/extension/: .markdownlintignore  README.md  manifest.json  package-lock.json  package.json  popup.html  tsconfig.json
crates/stygian-plugin/src/: config.rs  error.rs  lib.rs  ports.rs
crates/stygian-plugin/tests/: comprehensive_tests.rs  fallback_chain_integration.rs  http_transport.rs  integration.rs  integration_test.rs  reliability_integration.rs
crates/stygian-proxy/: AGENTS.md  Cargo.toml  README.md
crates/stygian-proxy/src/: browser.rs  circuit_breaker.rs  error.rs  fetcher.rs  graph.rs  health.rs  http_client.rs  lib.rs  manager.rs  mcp.rs  routing.rs  session.rs  stickiness.rs  types.rs  vendor_quirks.rs
(+335 files in other folders)
