[workspace]
resolver = "2"
members = [
    "crates/stygian-graph",
    "crates/stygian-browser",
]

[workspace.package]
version = "0.1.18"
edition = "2024"
rust-version = "1.93.1"
authors = ["Nick Campbell <s0ma@protonmail.com>"]
license = "AGPL-3.0-only OR LicenseRef-Commercial"
repository = "https://github.com/greysquirr3l/stygian"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Concurrency
rayon = "1.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.13", features = ["rustls", "json", "cookies", "gzip", "brotli"] }

# HTML parsing
scraper = "0.25"

# Graph algorithms
petgraph = "0.8"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
proptest = "1.5"
mockall = "0.14"
criterion = { version = "0.8", features = ["async_tokio"] }

# Browser automation (for stygian-browser)
chromiumoxide = "=0.9.1"

# Utilities
ulid = "1.2"
parking_lot = "0.12"
dashmap = "6"
lru = "0.16"
base64 = "0.22"
prometheus-client = "0.24"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"

# API server
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Data pipeline
csv = "1.3"

# WASM plugins (optional heavy dep)
wasmtime = { version = "42", default-features = false, features = ["runtime", "cranelift", "component-model"] }

# Database (optional)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
