[workspace]
resolver = "2"
members = [
    "crates/stygian-graph",
    "crates/stygian-browser",
    "crates/stygian-proxy",
    "crates/stygian-mcp",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.94.0"
authors = ["Nick Campbell <s0ma@protonmail.com>"]
license = "AGPL-3.0-only OR LicenseRef-Commercial"
repository = "https://github.com/greysquirr3l/stygian"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
async-trait = "0.1"

# Concurrency
rayon = "1.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.13", features = ["rustls", "json", "cookies", "gzip", "brotli"] }

# WebSocket client
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# HTML parsing
scraper = "0.25"

# Graph algorithms
petgraph = "0.8"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
proptest = "1.5"
mockall = "0.14"
criterion = { version = "0.8", features = ["async_tokio"] }

# Browser automation (for stygian-browser)
chromiumoxide = "=0.9.1"

# Utilities
ulid = "1.2"
parking_lot = "0.12"
dashmap = "6"
lru = "0.16"
base64 = "0.22"
prometheus-client = "0.24"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"

# API server
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }
uuid = { version = "1", features = ["v4", "serde"] }

# TLS configuration
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "0.26"

# Cryptography (webhook signature verification)
hmac = "0.12"
sha2 = "0.10"

# Data pipeline
csv = "1.3"

# Feed parsing (RSS/Atom)
feed-rs = "2.3"

# XML parsing
quick-xml = { version = "0.37", features = ["serialize"] }

# Compression
flate2 = "1.1"

# OpenAPI spec parsing
openapiv3 = "1"
serde_yaml = "0.9"
indexmap = "1"

# WASM plugins (optional heavy dep)
wasmtime = { version = "42", default-features = false, features = ["runtime", "cranelift", "component-model"] }

# Database (optional)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "migrate"] }

# Redis / Valkey (optional)
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.20"

# S3-compatible object storage (optional)
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
