[package]
name = "mycelium-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance graph-based web scraping engine with AI extraction, multi-modal support, and anti-bot capabilities"
keywords = ["scraping", "web-scraping", "graph", "ai", "extraction"]
categories = ["web-programming", "network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
# Core async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures.workspace = true
async-trait.workspace = true

# Concurrency
rayon.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["rustls-tls", "json", "cookies", "gzip", "brotli"] }

# HTML parsing
scraper.workspace = true

# Graph algorithms
petgraph.workspace = true

# Logging & tracing
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Utilities
ulid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
lru.workspace = true
figment.workspace = true
clap.workspace = true
indicatif.workspace = true
prometheus-client.workspace = true

# API server
axum.workspace = true
tower-http.workspace = true
uuid.workspace = true

# Output formats
csv.workspace = true

# Browser automation (optional)
mycelium-browser = { path = "../mycelium-browser", optional = true }

# WASM plugins (optional)
wasmtime = { workspace = true, optional = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
proptest.workspace = true
mockall.workspace = true
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "pipeline_bench"
harness = false

[features]
default = ["browser"]
# Include browser automation support
browser = ["dep:mycelium-browser"]
# Full feature set
full = ["browser", "api", "wasm-plugins", "postgres"]
# REST API server
api = []
# WASM plugin system (requires wasmtime — significant compile time)
wasm-plugins = ["dep:wasmtime"]
# PostgreSQL storage adapter
postgres = ["dep:sqlx"]

[[bin]]
name = "mycelium"
path = "src/bin/mycelium.rs"
required-features = []

[[bin]]
name = "mycelium-api"
path = "src/bin/mycelium-api.rs"
required-features = []
