[package]
name = "stygian-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Anti-detection browser automation library for Rust with CDP stealth features"
keywords = ["browser", "automation", "scraping", "anti-detection", "cdp"]
categories = ["web-programming", "automation"]

[features]
default = ["stealth"]
stealth = []
full = ["stealth", "mcp", "metrics"]
mcp = ["dep:base64"]
metrics = ["dep:prometheus-client"]

[dependencies]
# Browser automation
chromiumoxide = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Unique IDs
ulid = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Async utilities
futures = { workspace = true }

# Logging & tracing
tracing = { workspace = true }

# MCP feature: base64 encoding for screenshot data
base64 = { workspace = true, optional = true }

# Metrics feature: Prometheus exporter
prometheus-client = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
tracing-subscriber = { workspace = true }
