[package]
name = "stygian-charon-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
stygian-charon = { path = "..", features = ["caching"] }

[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

[[bin]]
name = "parse_har"
path = "fuzz_targets/parse_har.rs"